--- a/app/views/blogs/show.html.slim
+++ b/app/views/blogs/show.html.slim
@@ -8,3 +8,5 @@ p
 = link_to 'Edit', edit_user_blog_path(@blog.user, @blog)
 br
 = link_to 'Back', user_blogs_path(current_user)
+br
+= link_to 'New Post', new_post_path(blog_id: @blog.id)
