--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -1,4 +1,5 @@
-p#notice = notice
+p.notice
+ = notice
 
 p
   strong Title:
@@ -6,13 +7,7 @@ p
 p
   strong Content:
   = @post.content
-p
-  strong User:
-  = @post.user_id
-p
-  strong Blog:
-  = @post.blog_id
 
 = link_to 'Edit', edit_post_path(@post)
-'|
-= link_to 'Back', posts_path
+br
+= link_to 'Back', user_blogs_path(current_user)
