added navigation buttons

--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -10,4 +10,4 @@ p
 
 = link_to 'Edit', edit_post_path(@post)
 br
-= link_to 'Back', user_blogs_path(current_user)
+= link_to 'Back', user_root_path
