--- a/app/views/posts/new.html.slim
+++ b/app/views/posts/new.html.slim
@@ -2,4 +2,4 @@ h1 New post
 
 == render 'form'
 
-= link_to 'Back', user_blogs_path(current_user)
+= link_to 'Back', user_blog_path(@blog.user, @blog)
