--- a/app/views/posts/edit.html.slim
+++ b/app/views/posts/edit.html.slim
@@ -4,5 +4,5 @@ h1 Editing post
 
 = link_to 'Show', @post
 br
-= link_to 'Back', user_root_path
+= link_to 'Back', user_blog_path(@blog.user, @blog)
 
