--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -8,6 +8,8 @@ p
   strong Content:
   = @post.content
 
-= link_to 'Edit', edit_post_path(@post)
+= link_to 'Edit', edit_post_path(blog_id: @blog.id)
 br
-= link_to 'Back', user_root_path
+= link_to 'Back', user_blog_path(@blog.user, @blog)
+br
+= link_to 'Destroy', post_path, method: :delete
