--- a/app/views/blogs/show.html.slim
+++ b/app/views/blogs/show.html.slim
@@ -11,8 +11,9 @@ table
   tbody
     - @posts.each do |post|
       tr
-        td = link_to post.title, post
+        td = post.title
         td = post.created_at
+        td = link_to 'Show', post
 
 = link_to 'Edit', edit_user_blog_path(@blog.user, @blog)
 br
