--- a/app/views/blogs/edit.html.slim
+++ b/app/views/blogs/edit.html.slim
@@ -1,8 +1,20 @@
-h1 Editing blog
+.row
+  .columns
+    h2 = title("Edit #{@blog.subject}")
 
-== render 'form'
+.row
+  .medium-5.columns
+    = simple_form_for [current_user, @blog] do |f|
+      = f.error_notification
 
-= link_to 'Show', user_blog_path
-br
-= link_to 'Back', user_root_path
+      .form-inputs
+        = f.input :subject
+
+      .form-actions
+       = f.button :submit
+
+  .medium-5.medium-offset-1.columns.end
+    = link_to 'Back', user_root_path
+    br
+    = link_to 'Show', user_blog_path
 
