--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -1,28 +1,32 @@
-h2 Edit profile
+.row
+  .columns
+    h2 = title("Edit #{current_user.full_name}")
 
-= simple_form_for resource,
-  as: resource_name,
-  url: registration_path(resource_name),
-  html: { method: :put } do |f|
+.row
+  .medium-5.columns
+    = simple_form_for resource,
+      as: resource_name,
+      url: registration_path(resource_name),
+      html: { method: :put } do |f|
 
-    .form-inputs
-    = f.input :full_name, required: false, autofocus: true
-    = f.input :email, required: false
-    = f.input :password,
-                autocomplete: "off",
-                required: false
-    = f.input :password_confirmation,
-            required: false
+      .form-inputs
+      = f.input :full_name, required: false, autofocus: true
+      = f.input :email, required: false
+      = f.input :password,
+                  autocomplete: "off",
+                  required: false
+      = f.input :password_confirmation,
+              required: false
 
-    .form-actions
-    = f.button :submit, "Update"
+      .form-actions
+      = f.button :submit, "Update"
 
-h6
-b Cancel my account
-p
-| Unhappy?
-
-= link_to "Cancel my account.",
-      registration_path(resource_name),
-      data: { confirm: "Are you sure?" },
-      method: :delete
+  .medium-5.medium-offset-1.columns.end
+    h6
+    b Cancel my account
+    p
+    | Unhappy?
+    = link_to "Cancel my account.",
+        registration_path(resource_name),
+        data: { confirm: "Are you sure?" },
+        method: :delete
