--- a/app/views/devise/shared/_links.html.slim
+++ b/app/views/devise/shared/_links.html.slim
@@ -1,5 +1,5 @@
 h6 Anything else?
-ul
+ul.no-bullet
   - if controller_name != "sessions"
     li = link_to "Sign in", new_session_path(resource_name)
 
