--- a/app/views/users/profile.html.slim
+++ b/app/views/users/profile.html.slim
@@ -1,21 +1,22 @@
-p.notice
-  = notice
+.row
+  .columns
+    h1 #{current_user.full_name} blogs
 
-h1 #{current_user.full_name} blogs
+.row
+  .medium-5.columns
+    table
+      thead
+        tr
+          th Subject
 
-table
-  thead
-    tr
-      th Subject
+      tbody
+        - @blogs.each do |blog|
+          tr
+          td = link_to blog.subject, user_blog_path(blog.user,blog)
+          td = link_to 'Edit', edit_user_blog_path(blog.user, blog)
+          td = link_to 'Destroy', user_blog_path(blog.user,blog), method: :delete
 
-  tbody
-    - @blogs.each do |blog|
-      tr
-        td = link_to blog.subject, user_blog_path(blog.user,blog)
-        td = link_to 'Edit', edit_user_blog_path(blog.user, blog)
-        td = link_to 'Destroy', user_blog_path(blog.user,blog), method: :delete
-
-br
-= link_to 'New Blog', new_user_blog_path(current_user)
-br
-= link_to 'Sign out', destroy_user_session_path, method: "delete"
+  .medium-5.medium-offset-1.columns.end
+    = link_to 'New Blog', new_user_blog_path(current_user)
+    br
+    = link_to 'Sign out', destroy_user_session_path, method: "delete"
