--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -22,11 +22,7 @@
       = f.button :submit, "Update"
 
   .medium-5.medium-offset-1.columns.end
-    h6
-    b Cancel my account
-    p
-    | Unhappy?
-    = link_to "Cancel my account.",
+    = link_to "Cancel my account",
         registration_path(resource_name),
         data: { confirm: "Are you sure?" },
         method: :delete
