--- a/app/views/users/profile.html.slim
+++ b/app/views/users/profile.html.slim
@@ -4,19 +4,23 @@
 
 .row
   .medium-5.columns
-    table
-      thead
-        tr
-          th Subject
-
-      tbody
-        - @blogs.each do |blog|
+    - if @blogs.empty?
+        p No blogs
+    - else
+      table
+        thead
           tr
-          td = link_to blog.subject, user_blog_path(blog.user,blog)
-          td = link_to 'Edit', edit_user_blog_path(blog.user, blog)
-          td = link_to 'Destroy', user_blog_path(blog.user,blog), method: :delete
+            th Subject
+
+        tbody
+          - @blogs.each do |blog|
+            tr
+            td = link_to blog.subject, user_blog_path(blog.user,blog)
+            td = link_to 'Edit', edit_user_blog_path(blog.user, blog)
+            td = link_to 'Destroy', user_blog_path(blog.user,blog), method: :delete
 
   .medium-5.medium-offset-1.columns.end
-    = link_to 'New Blog', new_user_blog_path(current_user)
-    br
-    = link_to 'Sign out', destroy_user_session_path, method: "delete"
+    - if @blogs.empty?
+      = link_to 'Create your first blog', new_user_blog_path(current_user)
+    - else
+      = link_to 'New Blog', new_user_blog_path(current_user)
