--- a/app/views/blogs/edit.html.slim
+++ b/app/views/blogs/edit.html.slim
@@ -1,10 +1,10 @@
 .row
   .columns
-    h2 = title("Edit #{@blog.subject}")
+    h2 = title("Edit #{blog.subject}")
 
 .row
   .medium-5.columns
-    = simple_form_for [current_user, @blog] do |f|
+    = simple_form_for [current_user, blog] do |f|
       = f.error_notification
 
       .form-inputs
