--- a/app/views/blogs/new.html.slim
+++ b/app/views/blogs/new.html.slim
@@ -4,7 +4,7 @@
 
 .row
   .medium-5.columns
-    = simple_form_for [current_user, @blog] do |f|
+    = simple_form_for [current_user, blog] do |f|
       = f.error_notification
 
       .form-inputs
