comment and post expose

--- a/app/views/posts/edit.html.slim
+++ b/app/views/posts/edit.html.slim
@@ -1,10 +1,10 @@
 .row
   .columns
-    h2 = title("Edit #{@post.title}")
+    h2 = title("Edit #{post.title}")
 
 .row
   .medium-5.columns
-    = simple_form_for [@post] do |f|
+    = simple_form_for post do |f|
       = f.error_notification
 
       .form-inputs
@@ -15,7 +15,7 @@
         = f.button :submit
 
   .medium-5.medium-offset-1.columns.end
-    = link_to 'Show', @post
+    = link_to 'Show', post
     br
     = link_to 'Back', user_root_path
 
