--- a/app/views/posts/new.html.slim
+++ b/app/views/posts/new.html.slim
@@ -4,7 +4,7 @@
 
 .row
   .medium-5.columns
-    = simple_form_for [@post] do |f|
+    = simple_form_for post do |f|
       = f.error_notification
 
       .form-inputs
@@ -15,4 +15,4 @@
         = f.button :submit
 
   .medium-5.medium-offset-1.columns.end
-    = link_to 'Back', user_blog_path(@blog.user, @blog)
+    = link_to 'Back', user_blog_path(blog.user, blog)
