--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -1,21 +1,21 @@
 .row
   .columns
-    h2 = title("#{@post.title}")
+    h2 = title("#{post.title}")
 
 .row
   .medium-5.columns
     p
       strong Title:
-      = @post.title
+      = post.title
     p
       strong Content:
-      = @post.content
+      = post.content
 
     h2 Comments
-    - if @post.comments.empty?
+    - if post.comments.empty?
       p No comments here
     - else
-    - @post.comments.each do |comment|
+    - post.comments.each do |comment|
       p
         strong By user:
         = comment.user_email
@@ -25,12 +25,12 @@
         - if current_user.email == comment.user_email
          =link_to 'Delete comment', [comment.post, comment], method: :delete
   .medium-5.medium-offset-1.columns.end
-    - if current_user.id == @post.user.id
-     = link_to 'Edit', edit_post_path(blog_id: @blog.id)
+    - if current_user.id == post.user.id
+     = link_to 'Edit', edit_post_path(blog_id: blog.id)
      br
      = link_to 'Destroy', post_path, method: :delete
      br
-    = link_to 'Back', user_blog_path(@blog.user, @blog)
+    = link_to 'Back', user_blog_path(blog.user, blog)
 
 .row
   .columns
@@ -38,7 +38,7 @@
 
 .row
   .medium-5.columns
-    = simple_form_for [@post, @post.comments.build] do |f|
+    = simple_form_for [post, post.comments.build] do |f|
       .form-inputs
         = f.input :body
       .form-actions
