--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -10,7 +10,7 @@
           th Blog title
           th Written by
       tbody
-        - @blogs.each do |blog|
+        - blogs.each do |blog|
           tr
             td = link_to blog.subject, user_blog_path(blog.user,blog)
             td = blog.user.full_name
