--- a/app/views/user_blogs/index.html.slim
+++ b/app/views/user_blogs/index.html.slim
@@ -4,7 +4,7 @@
 
 .row
   .medium-5.columns
-    - if @blogs.empty?
+    - if blogs.empty?
         p No blogs
     - else
       table
@@ -13,14 +13,14 @@
             th Subject
 
         tbody
-          - @blogs.each do |blog|
+          - blogs.each do |blog|
             tr
             td = link_to blog.subject, user_blog_path(blog.user,blog)
             td = link_to 'Edit', edit_user_blog_path(blog.user, blog)
             td = link_to 'Destroy', user_blog_path(blog.user,blog), method: :delete
 
   .medium-5.medium-offset-1.columns.end
-    - if @blogs.empty?
+    - if blogs.empty?
       = link_to 'Create your first blog', new_user_blog_path(current_user)
     - else
       = link_to 'New Blog', new_user_blog_path(current_user)
