--- a/app/views/blogs/show.html.slim
+++ b/app/views/blogs/show.html.slim
@@ -18,7 +18,7 @@
           - posts.each do |post|
             tr
               td = link_to post.title, post
-              td = post.created_at
+              td = post.formatted_created_at
               td = post.comments.count
 
   .medium-5.medium-offset-1.columns.end
