--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -12,7 +12,7 @@
       tbody
         - blogs.each do |blog|
           tr
-            td = link_to blog.subject, user_blog_path(blog.user,blog)
+            td = link_to blog.subject, blog
             td = blog.user.full_name
 
 
