--- a/app/views/user_blogs/index.html.slim
+++ b/app/views/user_blogs/index.html.slim
@@ -15,9 +15,9 @@
         tbody
           - blogs.each do |blog|
             tr
-            td = link_to blog.subject, user_blog_path(blog.user,blog)
-            td = link_to 'Edit', edit_user_blog_path(blog.user, blog)
-            td = link_to 'Destroy', user_blog_path(blog.user,blog), method: :delete
+            td = link_to blog.subject, blog
+            td = link_to 'Edit', edit_blog_path(blog)
+            td = link_to 'Destroy', blog, method: :delete
 
   .medium-5.medium-offset-1.columns.end
     - if blogs.empty?
