--- a/app/views/pages/index.html.slim
+++ b/app/views/pages/index.html.slim
@@ -13,7 +13,7 @@
         - blogs.each do |blog|
           tr
             td = link_to blog.subject, blog
-            td = blog.user.full_name
+            td = blog.author
 
 
 
