--- a/app/views/blogs/edit.html.slim
+++ b/app/views/blogs/edit.html.slim
@@ -4,7 +4,7 @@
 
 .row
   .medium-5.columns
-    = simple_form_for blog do |f|
+    = simple_form_for blog.to_model do |f|
       = f.error_notification
 
       .form-inputs
