--- a/app/views/posts/edit.html.slim
+++ b/app/views/posts/edit.html.slim
@@ -14,7 +14,7 @@
         = f.button :submit
 
   .medium-5.medium-offset-1.columns.end
-    = link_to 'Show', post
+    = link_to "Show", post
     br
-    = link_to 'Back', user_root_path
+    = link_to "Back", user_root_path
 
