--- a/app/views/blogs/edit.html.slim
+++ b/app/views/blogs/edit.html.slim
@@ -14,6 +14,6 @@
        = f.button :submit
 
   .medium-5.medium-offset-1.columns.end
-    = link_to 'Back', user_root_path
+    = link_to "Back", user_root_path
 
 
