comment pagination added

--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -12,7 +12,7 @@
       = post.content
 
     h2 Comments
-    - if post.comments.empty?
+    - if comments.empty?
       p No comments here
     - else
       - comments.each do |comment|
