--- a/app/views/application/_navigation_user.html.slim
+++ b/app/views/application/_navigation_user.html.slim
@@ -1,10 +1,11 @@
-ul.top-bar-right.menu.dropdown(data-dropdown-menu)
-  - if user_signed_in?
-    li
-      a = current_user.full_name
-      ul.menu
-        li = link_to "Edit profile", edit_user_registration_path
-        li = link_to "Sign out", destroy_user_session_path
-  - else
-    = active_link_to "Sign in", new_user_session_path, active: :exclusive, wrap_tag: :li
-    = active_link_to "Sign up", new_user_registration_path, active: :exclusive, wrap_tag: :li
+.top-bar-right
+  ul.menu.dropdown(data-dropdown-menu)
+    - if user_signed_in?
+      li
+        a = current_user.full_name
+        ul.menu
+          li = link_to "Edit profile", edit_user_registration_path
+          li = link_to "Sign out", destroy_user_session_path
+    - else
+      = active_link_to "Sign in", new_user_session_path, active: :exclusive, wrap_tag: :li
+      = active_link_to "Sign up", new_user_registration_path, active: :exclusive, wrap_tag: :li
