added error when comment body empty

--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -12,20 +12,20 @@
       = post.content
 
     h2 Comments
-    - if comments.empty?
+    - if post.comments.empty?
       p No comments here
     - else
-      - comments.each do |comment|
+      - post.comments.each do |comment|
         p
           strong By user:
-          = comment.user_email
+
           br
           strong Comment:
           = comment.body
           - if policy(comment).manage?
             =link_to "Delete comment", [comment.post, comment], method: :delete
       .paginator
-        = paginate(comments)
+
   .medium-5.medium-offset-1.columns.end
     - if policy(post).manage?
      = link_to "Edit", edit_post_path(post)
@@ -39,9 +39,12 @@
 
   .row
     .medium-5.columns
-      = simple_form_for [post, comment] do |f|
+      = simple_form_for ([post, comment]) do |f|
+        = f.error_notification
+
         .form-inputs
           = f.input :body
+
         .form-actions
           = f.button :submit
 
